1.3.1 (30.03.2015):

* Fixed bug saving PDF after thresholding
* Warn if less free space in session directory than limit set in preferences


1.3.0 (30.01.2015):

* Avoid leading & trailing spaces in filename expanded from template
  Closes bugs #172 & #169 and Debian bug #774099.
  Thanks to Peter Marschall for the patch.
* Various GUI improvements.
  Closes Debian #774093 (various consistency updates for dialogs)
  Thanks to Peter Marschall for the patch.
* Improvements to the display of OCR output.
  Closes Debian #774094 (misc. improvements for OCR'ed texts)
  Thanks to Peter Marschall for the patch.
* More improvements to date metadata widget
  Closes Debian #774103 (fixes for date offset calculation)
  Thanks to Peter Marschall for the patch.
* + metadata for DjVu. Closes Debian #774097 (when saving as DjVU, use MetaData)
  Thanks to Peter Marschall for the patch.
* Refactored logging of OCR dependencies.
  Closes Debian #710428
  (Add "Found ocropus" to log information on application start)
* Catch many filesystem errors
* Return in one of the entry widgets in the the save dialog hits the
  save button.


1.2.7 (23.11.2014):

* Use date from entry rather than calendar widget.
  Closes bug #183 (Date not used)
* Use icons for 'email as PDF' and the hand tool designed by Andreas E.
  Closes LP: #1197264 (wrong icons in toolbar)
* + threshold as part of OCR process
* Fix bug saving encoded characters in hOCR
* Fix bug saving defaults that are not part of a profile
* Add scrollbars to the 'Page Options' tab to make the scan button visible on
  screens that are shorter than the scan dialog.
  Closes bug #188 'Scan Document dialogue too big'
* Fix crash on start if tesseract is not installed
* Fix button display in Tools > Unsharp Mask
  Closes Debian bug #769823
  (menu entry Tools > Unsharp Mask lacks OK & Cancel buttons)
* Finnish translation (thanks to tjamob)
* Update to Czech translation (thanks to Pavel Borecki)