@@ -2,6 +2,7 @@
 
 * Fixed bug saving PDF after thresholding
 * Warn if less free space in session directory than limit set in preferences
+* Fix defaults for unpaper and output-pages<->layout misalignment
 
 
 1.3.0 (30.01.2015):
